CSS/mainmobile.css
/* ----------------------------------- DIFFERENT SCREEN SIZES ----------------------------------- */

@media only screen and (max-width: 1600px)
{
    .RegularSection
    {
        margin: 0px 0px 0px 0px;
        padding: 60px 0px 60px 0px;
    }
    
    .RegularContainer
    {
        margin: 0px auto 0px auto;
        padding: 0px 60px 0px 60px;
    }

    .ProjectGithubButton
    {
        width: 26%;
        height: 56px;
        gap: 12px;
    }

    .ProjectGithubButton p
    {
        font-size: 1.6rem;
    }

    .ProjectGithubButton img
    {
        width: 30px;
        height: 30px;
    }

    .NavBarPassivePage
    {
        font-size: 26px;
    }

    .NavBarCurrentPage
    {
        font-size: 26px;
    }

    .NavBarName
    {
        font-size: 4.2rem;
    }
}

@media only screen and (max-width: 992px)
{
    .RegularSection
    {
        margin: 0px 0px 0px 0px;
        padding: 60px 0px 60px 0px;
    }
    
    .RegularContainer
    {
        margin: 0px auto 0px auto;
        padding: 0px 50px 0px 50px;
    }

    .MastheadImage
    {
        background-size: 1200pt, cover;
    }

    .NavBarHeader
    {
        height: 74px;
    }

    .NavBarLogo
    {
        padding-left: 20px;
    }

    .NavBarName
    {
        font-size: 4rem;
    }

    .NavBar
    {
        display: none;
    }

    .NavBarSocial
    {
        display: none;
    }

    .MobileNavMenu
    {
        display: none;
        position: fixed;
        top: 74px;
        width: 100%;
        height: 100vh;
        z-index: 900;
        background-color: var(--SiteColorTwo);
    }

    .MobileNav ul
    { 
        width: 100%;
        height: fit-content;
        display: flex;
        flex-wrap: wrap;
        align-content: flex-start;
    }

    .MobileNav ul li
    {
        flex-basis: 100%;
        border-top: 2px solid #0000006b;
    }

    .MobileNav ul li:last-child
    {
        border-bottom: 2px solid #0000006b;
    }

    .NavBarPassivePage
    {
        padding: 10px 0px;
        text-align: center;
        flex-basis: 100%;
        font-size: 3.8vh;
        height: 10vh;
        line-height: 8vh;
    }

    .NavBarCurrentPage
    {
        padding: 10px 0px;
        text-align: center;
        flex-basis: 100%;
        font-size: 3.8vh;
        height: 10vh;
        line-height: 8vh;
    }

    .MobileNavBarSocial
    {
        margin: 0;
        padding: 40px 0px;
        display: flex;
        flex-direction: row;
        gap: 18px;
        justify-content: center;
    }

    .NavBarSocialLinkedIn, .NavBarSocialYoutube, .NavBarSocialGit, .NavBarSocialThreads
    {
        width: 32px;
        height: 32px;
    }

    .BurgerMenuButton
    {
        display: block;
        margin-right: 10px;
        width: 50px;
        height: 50px;
        background-image: url(../Img/MobileMenu/BurgerMenu.png), url(../Img/MobileMenu/CloseIcon.png);
        background-size: cover;
        background-repeat: no-repeat;
        background-position: center, center left 50px;
        align-self: center;
        overflow: hidden;
    }

    .FooterContainer
    {
        width: 100%;
        padding: 30px 0px 30px 0px;
        background-color: var(--SiteColorOne);
        z-index: 500;
    }

    .FooterContainerFlex
    {
        display: flex;
        flex-basis: 100%;
        flex-wrap: wrap;
    }

    .FooterContainerFlex ul:nth-child(1)
    {
        border-left: none;
        padding: 0px 0px 20px 0px;
        flex-basis: 100%;
        text-align: center;
        order: 1;
    }

    .FooterContainerFlex ul:nth-child(1) a
    {
        text-align: center;
    }
    
    .FooterContainerFlex ul:nth-child(2)
    {
        flex-basis: 100%;
        padding-bottom: 20px;
        text-align: center;
        order: 2;
    }

    .FooterContainerFlex ul:nth-child(2) a
    {
        text-align: center;
    }

    .FooterContainerFlex ul:nth-child(3)
    {
        flex-basis: 100%;
        text-align: center;
        padding-bottom: 20px;
        order: 4;
    }

    .FooterContainerFlex ul:nth-child(3) p
    {
        color: rgba(255, 255, 255, 0.5);
        text-align: center;
        font-size: 1.4rem;
    }

    .FooterContainerFlex ul:nth-child(4)
    {
        flex-basis: 100%;
        text-align: center;
        padding: 20px 0px;
        border-right: none;
        border-top: 4px solid white;
        order: 3;
    }

    .FooterContainerFlex ul:nth-child(4) h2
    {
        line-height: 1.4;
        text-align: center;
    }

    .FooterContainerFlex ul:nth-child(4) h3
    {
        line-height: 1.5;
        text-align: center;
    }

    .ProjectGithubButton
    {
        width: 36%;
        height: 56px;
        gap: 12px;
    }

    .ProjectGithubButton p
    {
        font-size: 1.6rem;
    }

    .ProjectGithubButton img
    {
        width: 30px;
        height: 30px;
    }
}

@media only screen and (max-width: 768px)
{
    .RegularSection
    {
        margin: 0px 0px 0px 0px;
        padding: 60px 0px 60px 0px;
    }
    
    .RegularContainer
    {
        margin: 0px auto 0px auto;
        padding: 0px 36px 0px 36px;
    } 

    .MastheadImage
    {
        background-size: 960pt, cover;
        height: 240px;
    }

    .NavBarHeader
    {
        height: 74px;
    }

    .NavBarLogo
    {
        padding-left: 20px;
    }

    .NavBarName
    {
        font-size: 4rem;
    }

    .ProjectGithubButton
    {
        width: 42%;
        height: 56px;
        gap: 12px;
    }

    .ProjectGithubButton p
    {
        font-size: 1.6rem;
    }

    .ProjectGithubButton img
    {
        width: 30px;
        height: 30px;
    }
}

@media only screen and (max-width: 600px)
{
    .RegularSection
    {
        margin: 0px 0px 0px 0px;
        padding: 60px 0px 60px 0px;
    
    }
    
    .RegularContainer
    {
        margin: 0px auto 0px auto;
        padding: 0px 20px 0px 20px;
    } 

    .MastheadImage
    {
        background-size: 700pt, cover;
        height: 220px;
    }

    .NavBarHeader
    {
        height: 74px;
    }

    .NavBarLogo
    {
        padding-left: 20px;
    }

    .NavBarName
    {
        font-size: 4rem;
    }

    .ProjectGithubButton
    {
        width: 66%;
        height: 50px;
        gap: 12px;
    }

    .ProjectGithubButton p
    {
        font-size: 1.5rem;
    }

    .ProjectGithubButton img
    {
        width: 30px;
        height: 30px;
    }
}

@media only screen and (max-width: 300px)
{
    .MastheadImage
    {
        background-size: 500pt, cover;
        height: 220px;
    }

    .NavBarName
    {
        font-size: 3rem;
    }
}

@media only screen and (min-height: 1300px)
{
    .ButtonList
    {
        margin-bottom: 160px;
    }
}

